# razorbill

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.example.toml  pyproject.toml  razorbill.service
docs/: configuration.md  desktop-integration.md
razorbill/: __init__.py  __main__.py  ask.py  audio.py  bird.txt  config.py  context.py  daemon.py  deepgram.py  events.py  meeting.py  notify.py  openai_api.py  realtime.py  state.py  transcript.py  tui.py  video.py  ws.py
tests/: test_config.py  test_meeting.py  test_transcript.py
