[project]
name = "razorbill-notes"
version = "0.8.0"
description = "Meeting transcription and notes from system audio. TUI, CLI, and daemon; bring your own key."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Armaan", email = "armaanp4423@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0",
]
keywords = ["meetings", "transcription", "notes", "whisper", "pipewire", "granola"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Office/Business",
]

[project.urls]
Repository = "https://github.com/armaanpriyadarshan/razorbill"
Changelog = "https://github.com/armaanpriyadarshan/razorbill/blob/main/CHANGELOG.md"

[project.scripts]
razorbill = "razorbill.__main__:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["razorbill"]

[tool.hatch.build.targets.sdist]
include = ["razorbill", "README.md", "LICENSE", "CHANGELOG.md", "config.example.toml", "razorbill.service", "docs", "assets"]
